--- a/app/src/main/res/layout/item_movie.xml
+++ b/app/src/main/res/layout/item_movie.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    android:background="#FC020307"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/contanier"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="#FC020307">
 
     <ImageView
         android:id="@+id/ivPoster"
@@ -23,10 +23,10 @@
         android:layout_alignParentTop="true"
         android:layout_marginStart="5dp"
         android:layout_toEndOf="@+id/ivPoster"
-        android:textColor="#F5FAFBFB"
         android:fontFamily="monospace"
-        android:textStyle="bold"
+        android:textColor="#F5FAFBFB"
         android:textSize="21sp"
+        android:textStyle="bold"
         tools:text="Wonder Woman 1984" />
 
     <TextView
@@ -36,10 +36,10 @@
         android:layout_below="@+id/tvTitle"
         android:layout_marginStart="5dp"
         android:layout_marginTop="5dp"
-        android:textColor="#F5FAFBFB"
+        android:layout_toEndOf="@+id/ivPoster"
+        android:ellipsize="end"
         android:fontFamily="sans-serif"
         android:maxLines="7"
-        android:ellipsize="end"
-        android:layout_toEndOf="@+id/ivPoster"
+        android:textColor="#F5FAFBFB"
         tools:text="Wonder Woman comes into conflict with the Soviet Union during the Cold War in the 1980s and finds a formidable foe by the name of the Cheetah." />
 </RelativeLayout>
