--- a/app/src/main/res/layout/item_movie_popular.xml
+++ b/app/src/main/res/layout/item_movie_popular.xml
@@ -12,6 +12,17 @@
         android:layout_alignParentTop="true"
         android:layout_marginStart="0dp"
         android:layout_marginTop="0dp"
+        android:adjustViewBounds="true"
+        android:scaleType="fitXY"
         />
 
+    <ImageView
+        android:id="@+id/youtubeIcon"
+        android:layout_width="60dp"
+        android:layout_height="40dp"
+        android:layout_centerInParent="true"
+        android:adjustViewBounds="true"
+        android:elevation="10dp"
+        android:scaleType="fitXY"
+        android:src="@drawable/yt_icon_rgb" />
 </RelativeLayout>
